infra/k8s-production/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: api.brightora.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/v1/users/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 5000
          - pathType: ImplementationSpecific
            path: /images/users/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 5000
          - path: /api/v1/courses/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-srv
                port:
                  number: 5000
          - path: /api/v1/lessons/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-srv
                port:
                  number: 5000
          - path: /api/v1/directory/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-srv
                port:
                  number: 5000
          - path: /api/v1/exercise/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-srv
                port:
                  number: 5000
          - path: /api/v1/sections/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-srv
                port:
                  number: 5000
          - path: /api/v1/carts/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart-srv
                port:
                  number: 5000
          - path: /api/v1/reviews/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: review-srv
                port:
                  number: 5000
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.12.0-beta.0/deploy/static/provider/do/deploy.yaml
